<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioPlayerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".AudioPlayerActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@id/left_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="283dp"
        android:layout_height="283dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cover_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        tools:src="@drawable/ic_launcher_background" />


    <TextView
        android:id="@+id/trackNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/coverImage"
        tools:text="Yesterday (Remastered 2009)" />


    <TextView
        android:id="@+id/artistNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="#666666"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackNameText"
        tools:text="The Beatles" />


    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/add_to_playlist"
        android:src="@drawable/ic_add1"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/artistNameText"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />


    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play_arrow"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/artistNameText"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.5" />


    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_border"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/artistNameText"
        app:layout_constraintEnd_toStartOf="@id/right_guideline" />


    <TextView
        android:id="@+id/playbackProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0:00"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.5" />



    <TextView
        android:id="@+id/durationTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/duration"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playbackProgressText" />

    <TextView
        android:id="@+id/durationValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@id/durationTitleText"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="5:35" />


    <TextView
        android:id="@+id/albumTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/album"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/durationTitleText" />


    <TextView
        android:id="@+id/albumValueText"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/durationValueText"
        app:layout_constraintTop_toBottomOf="@+id/durationValueText"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/yearTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/year"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumTitleText" />

    <TextView
        android:id="@+id/yearValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@id/yearTitleText"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="1965" />


    <TextView
        android:id="@+id/genreTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/genre"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/yearTitleText" />

    <TextView
        android:id="@+id/genreValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@id/genreTitleText"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="Rock" />


    <TextView
        android:id="@+id/countryTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/country"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genreTitleText" />

    <TextView
        android:id="@+id/countryValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@id/countryTitleText"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>